--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,11 @@
+@import './fonts.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
+  font-size: 62.5%;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -13,4 +19,80 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  background: linear-gradient(253.94deg, #B09FFE 0%, #D3C4FF 19.69%, #E0C6FF 44.85%, #F1C9FF 62.8%, #F6D2FC 76.69%, #FFFACB 99.5%);
+  overflow: hidden;
+}
+
+/* div.xx {
+  width: 20rem;
+} */
+
+div.xx>div {
+  /* @apply ; */
+}
+
+.xx button {
+  width: 38rem !important;
+  height: 5.5rem !important;
+  border-radius: 1000px !important;
+  font-size: 2rem !important;
+  text-align: center !important;
+  background-color: #FF60D5 !important;
+}
+
+.xx button:hover {
+  background-color: #FF9EE6 !important;
+  transform: scale(1) !important;
+}
+
+.btn {
+  color: white;
+  width: 38rem !important;
+  height: 5.5rem !important;
+  border-radius: 1000px !important;
+  font-size: 2rem !important;
+  text-align: center !important;
+  background-color: #FF60D5 !important;
+}
+
+.btn:hover {
+  background-color: #FF9EE6 !important;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  opacity: 0;
+  animation: fadeIn 1s ease-in forwards;
+}
+
+.fadeIn:nth-child(2) {
+  animation-delay: .2s;
+}
+
+@keyframes upDown {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.upDown {
+  animation: upDown 2s ease-in-out infinite;
 }
